// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scale > renders correct no type is set 1`] = `
<g>
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(90 50 50) 
        translate(49 10)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(130 50 50) 
        translate(49 10)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(170 50 50) 
        translate(49 10)
        "
    width="2"
  />
  <rect
    class="someActiveClassName"
    fill="red"
    height="10"
    stroke="none"
    transform="
        rotate(210 50 50) 
        translate(49 10)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(250 50 50) 
        translate(49 10)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(290 50 50) 
        translate(49 10)
        "
    width="2"
  />
</g>
`;

exports[`Scale > renders correct type is set to circle 1`] = `
<g>
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(90 50 50) 
        translate(49 10)
        "
  />
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(130 50 50) 
        translate(49 10)
        "
  />
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(170 50 50) 
        translate(49 10)
        "
  />
  <circle
    class="someActiveClassName"
    fill="red"
    r="2"
    stroke="none"
    transform="
        rotate(210 50 50) 
        translate(49 10)
        "
  />
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(250 50 50) 
        translate(49 10)
        "
  />
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(290 50 50) 
        translate(49 10)
        "
  />
</g>
`;

exports[`Scale > renders correct type is set to rect 1`] = `
<g>
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(90 50 50) 
        translate(49 10)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(130 50 50) 
        translate(49 10)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(170 50 50) 
        translate(49 10)
        "
    width="2"
  />
  <rect
    class="someActiveClassName"
    fill="red"
    height="10"
    stroke="none"
    transform="
        rotate(210 50 50) 
        translate(49 10)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(250 50 50) 
        translate(49 10)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(290 50 50) 
        translate(49 10)
        "
    width="2"
  />
</g>
`;

exports[`Scale > renders correct with custom render function for ticks 1`] = `
<g>
  <circle
    r="2"
    x="49"
    y="10"
  />
  <circle
    r="2"
    x="49"
    y="10"
  />
  <circle
    r="2"
    x="49"
    y="10"
  />
  <circle
    r="2"
    x="49"
    y="10"
  />
  <circle
    r="2"
    x="49"
    y="10"
  />
  <circle
    r="2"
    x="49"
    y="10"
  />
</g>
`;

exports[`Scale > renders when value is null 1`] = `
<g>
  <circle
    class="someClassName"
    r="2"
    stroke="none"
    transform="
        rotate(90 50 50) 
        translate(49 10)
        "
  />
  <circle
    class="someClassName"
    r="2"
    stroke="none"
    transform="
        rotate(156.66666666666669 50 50) 
        translate(49 10)
        "
  />
  <circle
    class="someClassName"
    r="2"
    stroke="none"
    transform="
        rotate(223.33333333333334 50 50) 
        translate(49 10)
        "
  />
  <circle
    class="someClassName"
    r="2"
    stroke="none"
    transform="
        rotate(290 50 50) 
        translate(49 10)
        "
  />
</g>
`;
